Reformatting code to clean it up - Added tests and checked test coverage